# warpgrapher-azure-functions

./: .gitmodules  Cargo.toml  Dockerfile  local.settings.json
src/functions/: mod.rs  warpgrapher_handler.rs
