[package]
name = "warpgrapher-azure-functions"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.7"
azure-functions = {version="0.11.0", path="azure-functions-rs/azure-functions"}
warpgrapher = { git="https://github.com/warpforge/warpgrapher", branch="53-release-0.3.0", features=["cosmos"] }
futures = {version="0.3.5"}
serde_json = {version="1.0.57"}
