[package]
name = "warpgrapher-azure-functions"
version = "0.1.0"
authors = ["dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.19"
azure-functions = {version="0.11.0", path="azure-functions-rs/azure-functions"}
warpgrapher = { version="0.11.1", features=["gremlin"] }
futures = {version="0.3.21"}
serde_json = {version="1.0.81"}
serde = "1.0.137"
